fix(Drawer): When padding none is set on mobile only the top nav padding should be retained

--- a/src/Drawer/index.scss
+++ b/src/Drawer/index.scss
@@ -74,8 +74,8 @@ because we need to replace the left/right controls with controls that are inside
   but retain the padding for the controls at the top of the drawer.
 */
 .padding--all--none.drawer--vertical--mobile {
-  padding: 0 !important;
-  padding-top: 48px !important;
+  padding: 0;
+  padding-top: 48px;
 }
 
 .backdrop {
